--- a/wp-content/themes/jupiter-child/scss/style.scss
+++ b/wp-content/themes/jupiter-child/scss/style.scss
@@ -689,11 +689,7 @@ ul#menu-main_menu {
 #mk-footer{
     background-color: $black !important;
     .footer-wrapper{
-        max-width: 1650px;
-        border-bottom: 1px solid #444444;
-        @media screen and (max-width: 768px) {
-            border-bottom: none;
-        }
+        max-width: 1250px;
         .mk-padding-wrapper {
             div {
                 section {
@@ -727,7 +723,7 @@ ul#menu-main_menu {
                     }
                     a {
                         display: block;
-                        text-align: left;
+                        text-align: center;
                         color: $white !important;
                         text-transform: uppercase;
                         font-family: $h-font;
@@ -750,7 +746,7 @@ ul#menu-main_menu {
                                 font-family: $p-font;
                                 font-size: 14px;
                                 text-transform: capitalize;
-                                text-align: left;
+                                text-align: center;
                                 @media screen and (max-width: 768px) {
                                     text-align: center;
                                 }
@@ -769,14 +765,21 @@ ul#menu-main_menu {
 #sub-footer {
     background: $black;
     .mk-grid {
+        border-top: 1px solid #444444;
+        padding: 0 5%;
+        @media screen and (max-width: 768px) {
+            padding: 0;
+        }
         .footer-social {
             font-family: $a-font;
-            font-size: 3em;
+            font-size: calc(1em + 1.5vw);
             display: inline-block;
+            width: 15%;
             @media screen and (max-width: 768px) {
                 display: block;
                 text-align: center;
                 margin-bottom: 20px;
+                font-size: 3em;
             }
             a {
                 color: $gold;
@@ -784,9 +787,10 @@ ul#menu-main_menu {
             }
         }
         .mk-footer-copyright{
-            width: 80%;
+            width: 70%;
             float: none;
             display: inline-block;
+            padding-left: 0 !important;
             @media screen and (max-width: 768px) {
                 width: 90%;
             }
@@ -1990,6 +1994,22 @@ display: inline-block;
                 p {
                     padding-left: 15%;
                 }
+            }
+        }
+    }
+}
+.mk-fullscreen-search-overlay {
+    background-color: rgba(-11,117,201,.94);
+    .mk-fullscreen-search-wrapper {
+        p {
+            font-size: 26px;
+        }
+        #mk-fullscreen-search-input {
+            box-shadow: 0 3px 0 0 rgba(255,255,255,0.5) !important;
+        }
+        .fullscreen-search-icon {
+            svg {
+                fill: $white;
             }
         }
     }
