--- a/wp-content/themes/jupiter-child/style.css
+++ b/wp-content/themes/jupiter-child/style.css
@@ -546,13 +546,7 @@ ul#menu-main_menu li ul.sub-menu li a {
   background-color: #000 !important;
 }
 #mk-footer .footer-wrapper {
-  max-width: 1650px;
-  border-bottom: 1px solid #444;
-}
-@media screen and (max-width: 768px) {
-  #mk-footer .footer-wrapper {
-    border-bottom: none;
-  }
+  max-width: 1250px;
 }
 @media screen and (max-width: 768px) {
   #mk-footer .footer-wrapper .mk-padding-wrapper div section div img {
@@ -574,7 +568,7 @@ ul#menu-main_menu li ul.sub-menu li a {
 }
 #mk-footer .widget_nav_menu div #menu-about_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children a, #mk-footer .widget_nav_menu div #menu-impact_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children a, #mk-footer .widget_nav_menu div #menu-rider-hub_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children a {
   display: block;
-  text-align: left;
+  text-align: center;
   color: #fff !important;
   text-transform: uppercase;
   font-family: "Futura LT Pro Heading", Helvetica, sans-serif;
@@ -601,7 +595,7 @@ ul#menu-main_menu li ul.sub-menu li a {
   font-family: "Futura LT Pro Body", Helvetica, sans-serif;
   font-size: 14px;
   text-transform: capitalize;
-  text-align: left;
+  text-align: center;
 }
 @media screen and (max-width: 768px) {
   #mk-footer .widget_nav_menu div #menu-about_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children .sub-menu li a, #mk-footer .widget_nav_menu div #menu-impact_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children .sub-menu li a, #mk-footer .widget_nav_menu div #menu-rider-hub_footer_menu li.menu-item.menu-item-type-post_type.menu-item-object-page.menu-item-has-children .sub-menu li a {
@@ -614,16 +608,27 @@ ul#menu-main_menu li ul.sub-menu li a {
 #sub-footer {
   background: #000;
 }
+#sub-footer .mk-grid {
+  border-top: 1px solid #444;
+  padding: 0 5%;
+}
+@media screen and (max-width: 768px) {
+  #sub-footer .mk-grid {
+    padding: 0;
+  }
+}
 #sub-footer .mk-grid .footer-social {
   font-family: FontAwesome;
-  font-size: 3em;
+  font-size: calc(1em + 1.5vw);
   display: inline-block;
+  width: 15%;
 }
 @media screen and (max-width: 768px) {
   #sub-footer .mk-grid .footer-social {
     display: block;
     text-align: center;
     margin-bottom: 20px;
+    font-size: 3em;
   }
 }
 #sub-footer .mk-grid .footer-social a {
@@ -631,9 +636,10 @@ ul#menu-main_menu li ul.sub-menu li a {
   margin-right: 15px;
 }
 #sub-footer .mk-grid .mk-footer-copyright {
-  width: 80%;
+  width: 70%;
   float: none;
   display: inline-block;
+  padding-left: 0 !important;
 }
 @media screen and (max-width: 768px) {
   #sub-footer .mk-grid .mk-footer-copyright {
@@ -1642,4 +1648,16 @@ span.vc_tta-title-text.display-none-accordion:after {
 }
 .page-template-template-faqs .faqs-accordion .vc_tta-panel-body div p {
   padding-left: 15%;
+}
+.mk-fullscreen-search-overlay {
+  background-color: rgba(-11, 117, 201, .94);
+}
+.mk-fullscreen-search-overlay .mk-fullscreen-search-wrapper p {
+  font-size: 26px;
+}
+.mk-fullscreen-search-overlay .mk-fullscreen-search-wrapper #mk-fullscreen-search-input {
+  box-shadow: 0 3px 0 0 rgba(255, 255, 255, 0.5) !important;
+}
+.mk-fullscreen-search-overlay .mk-fullscreen-search-wrapper .fullscreen-search-icon svg {
+  fill: #fff;
 }
