--- a/wp-content/themes/jupiter-child/style.css
+++ b/wp-content/themes/jupiter-child/style.css
@@ -629,6 +629,8 @@ ul#menu-main_menu li ul.sub-menu li a {
     text-align: center;
     margin-bottom: 20px;
     font-size: 3em;
+    width: 100%;
+    margin-top: 30px;
   }
 }
 #sub-footer .mk-grid .footer-social a {
@@ -1504,11 +1506,9 @@ span.vc_tta-title-text.display-none-accordion:after {
 }
 @media screen and (max-width: 768px) {
   .page-template-template-splash .background-layer-holder div {
-    background-attachment: scroll !important;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+    background-attachment: fixed;
+    background-position: center center;
+    background-repeat: no-repeat;
   }
 }
 .blurb-column {
