--- a/wp-content/themes/jupiter-child/scss/style.scss
+++ b/wp-content/themes/jupiter-child/scss/style.scss
@@ -287,13 +287,26 @@ li.mk-tabs-tab {
 /* ============== Active Menu List  ============== */
 
 .menu-hover-style-2 .main-navigation-ul {
-    li.current-page-ancestor {
+    li.current-page-ancestor{
         a{
             background-image: linear-gradient(bottom, $gold 50%, transparent 50%);
             background-image: -o-linear-gradient(bottom, $gold 50%, transparent 50%);
             background-image: -moz-linear-gradient(bottom, $gold 50%, transparent 50%);
             background-image: -webkit-linear-gradient(bottom, $gold 50%, transparent 50%);
             background-image: -ms-linear-gradient(bottom, $gold 50%, transparent 50%);
+        }
+    }
+}
+
+ul.main-navigation-ul {
+    li.menu-item.menu-item-type-post_type.menu-item-object-page.current-menu-item.page_item.current_page_item.menu-item-has-children.no-mega-menu{
+        a.menu-item-link.js-smooth-scroll{
+            background-image: linear-gradient(bottom, $gold 50%, transparent 50%);
+            background-image: -o-linear-gradient(bottom, $gold 50%, transparent 50%);
+            background-image: -moz-linear-gradient(bottom, $gold 50%, transparent 50%);
+            background-image: -webkit-linear-gradient(bottom, $gold 50%, transparent 50%);
+            background-image: -ms-linear-gradient(bottom, $gold 50%, transparent 50%);
+            color: $black;
         }
     }
 }
@@ -2044,5 +2057,13 @@ display: inline-block;
                 fill: $white;
             }
         }
+    }
+}
+
+// === DOLLARS AT WORK PAGE STYLING === //
+.blue-page-section {
+    background: $blue;
+    h2 {
+        color: $white;
     }
 }
