change padding on about and made template

--- a/wp-content/themes/jupiter-child/scss/style.scss
+++ b/wp-content/themes/jupiter-child/scss/style.scss
@@ -1113,7 +1113,7 @@ span.vc_tta-title-text.display-none-accordion{
     .column_container {
         div {
             p {
-                padding: 2% 0 2% 15%;
+                padding: 2% 0 2% 100px;
                 @media screen and (max-width: 768px) {
                     padding: 2% 0;
                 }
