change height of rider hub boxes

--- a/wp-content/themes/jupiter-child/scss/style.scss
+++ b/wp-content/themes/jupiter-child/scss/style.scss
@@ -1926,6 +1926,7 @@ display: inline-block;
         padding-top: 50px;
         padding-bottom: 50px;
     }
+    min-height: 320px;    
     background: black;
     p, h3 {
         color: $white;
