--- a/wp-content/themes/jupiter-child/scss/style.scss
+++ b/wp-content/themes/jupiter-child/scss/style.scss
@@ -1032,6 +1032,12 @@ div.p-block {
         padding-bottom: 30px !important;
     }
     div {
+        a {
+            margin-left: 70px;
+            @media screen and (max-width: 768px) {
+                margin-left: 30px;
+            }
+        }
         button {
             margin-left: 70px;
             padding: 5% 10%;
