--- a/wp-content/themes/jupiter-child/scss/style.scss
+++ b/wp-content/themes/jupiter-child/scss/style.scss
@@ -1503,6 +1503,13 @@ display: inline-block;
     }
 }
 
+.ambassador-scroll,
+.women-scroll,
+.community-scroll,
+.industry-scroll {
+    cursor: pointer;
+}
+
 // === MOBILE MENU STYLING === //
 
 @media screen and (max-width: 1140px) {
