--- a/wp-content/themes/jupiter-child/scss/style.scss
+++ b/wp-content/themes/jupiter-child/scss/style.scss
@@ -2165,3 +2165,15 @@ display: inline-block;
     background-repeat: no-repeat;
     width: 50vw;
 }
+
+// ===== CUSTOM PRELOADER ===== //
+#ride-preloader { 
+    position: fixed; 
+    left: 0; 
+    top: 0; 
+    z-index: 999; 
+    width: 100%; 
+    height: 100%; 
+    overflow: visible; 
+    background: #f5f5f5 url('http://staging.causeforce.com/wp-content/uploads/2017/05/ring-alt.gif') no-repeat center center; 
+}
