--- a/wp-content/themes/jupiter-child/style.css
+++ b/wp-content/themes/jupiter-child/style.css
@@ -1781,3 +1781,13 @@ span.vc_tta-title-text.display-none-accordion:after {
   background-repeat: no-repeat;
   width: 50vw;
 }
+#ride-preloader {
+  position: fixed;
+  left: 0;
+  top: 0;
+  z-index: 999;
+  width: 100%;
+  height: 100%;
+  overflow: visible;
+  background: #f5f5f5 url('http://staging.causeforce.com/wp-content/uploads/2017/05/ring-alt.gif') no-repeat center center;
+}
