--- a/wp-content/themes/jupiter-child/scss/style.scss
+++ b/wp-content/themes/jupiter-child/scss/style.scss
@@ -2177,3 +2177,56 @@ display: inline-block;
     overflow: visible; 
     background: #f5f5f5 url('http://staging.causeforce.com/wp-content/uploads/2017/05/ring-alt.gif') no-repeat center center; 
 }
+
+// ===== FUNDRAISING PAGE STYLING ===== //
+.fundraising-tabs {
+    @extend .about-cancer-tabs;
+    .mk-tabs-tabs {
+        li {
+            a {
+                top: auto !important;
+                left: 3% !important;
+                transform: translate(0, -5%) !important;
+                margin-left: 20px !important;
+            }
+        }
+    }
+    .mk-tabs-panes {
+        .mk-text-block {
+            h3 {
+                @media screen and (max-width: 768px) {
+                    display: none;
+                }
+            }
+        }
+        .btn-with-link-blue {
+            margin-left: 7%;
+            a {
+                @media screen and (max-width: 768px) {
+                    background-color: transparent !important;
+                    &:hover {
+                        background-color: $blue !important;
+                    }
+                }
+            }
+        }
+    }
+}
+
+// ===== WORKPLACE GIVING STYLING ==== //
+.workplace-giving-pg-section {
+    @extend .about-white-pg-section;
+    .column_container {
+        div {
+            p {
+                padding-left: 5% !important;
+            }
+            ol {
+                padding-left: 6%;
+                @media screen and (max-width: 768px) {
+                    padding-left: 0;
+                }
+            }
+        }
+    }
+}
